# libds

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  README.md
doc/: saida.txt
include/ds/: deque.hpp  iterator.hpp  t  test.cpp
include/ds/deque/: deque.hpp
lib/tm/: CMakeLists.txt  test_manager.cpp  test_manager.hpp
src/ds/: deque.tpp  example.cpp
src/ds/deque/: example.cpp
tests/: CMakeLists.txt
tests/ds/deque/: driver.cpp  iterator_tests.hpp  methods_tests.hpp
